# pastex

./: .gitignore  Cargo.toml  build.rs  elm.json  elm_build  readme.md
client/: index.html
client/src/: App.svelte
client/src/lib/: Counter.svelte
elm/: Ace.elm  Editor.elm  Interprop.elm  Parameters.elm  PdfView.elm
elm/Interprop/: Websocket.elm
elm/Ui/: Ace.elm  Chat.elm  Parameters.elm  PdfView.elm
src/: db.rs  handlers.rs  main.rs  routes.rs
